fixed color contrast on astro page

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -9,6 +9,10 @@
         flex: 1 0 0;
     }
 
+    .flight-img-placement {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -21,6 +25,11 @@
 
     .card-content-wrapper {
         flex: 1 0 0;
+    }
+
+    .flight-img-placement {
+        display: flex;
+        flex-direction: column;
     }
 
     /* here is styling for the back button  */
